patitoParser.py
# Generated from patito.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



from varfunctable import *
global funclist, quads
funclist = FuncTable()
quads = Cuadruplos()

global current_content, current_func, current_scope, current_type, current_var, various_vars, temporal_operator

current_var = ''
current_func = ''
current_type = ''
current_scope = 0
current_content = ''
various_vars = []
temporal_operator = ''



class patitoParser ( Parser ):

    grammarFileName = "patito.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "';'", "'main'", "'end'", 
                     "'var'", "','", "':'", "'int'", "'float'", "'void'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "'='", "'>'", 
                     "'<'", "'!='", "'+'", "'-'", "'*'", "'/'", "'if'", 
                     "'else'", "'while'", "'do'", "'print'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Id", "Cte_int", "Cte_float", 
                      "Cte_string", "WS" ]

    RULE_startRule = 0
    RULE_programa = 1
    RULE_vars = 2
    RULE_type = 3
    RULE_funcs = 4
    RULE_body = 5
    RULE_statement = 6
    RULE_assign = 7
    RULE_expression = 8
    RULE_exp = 9
    RULE_termino = 10
    RULE_factor = 11
    RULE_cte = 12
    RULE_condition = 13
    RULE_cycle = 14
    RULE_f_call = 15
    RULE_print = 16

    ruleNames =  [ "startRule", "programa", "vars", "type", "funcs", "body", 
                   "statement", "assign", "expression", "exp", "termino", 
                   "factor", "cte", "condition", "cycle", "f_call", "print" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    Id=30
    Cte_int=31
    Cte_float=32
    Cte_string=33
    WS=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programa(self):
            return self.getTypedRuleContext(patitoParser.ProgramaContext,0)


        def EOF(self):
            return self.getToken(patitoParser.EOF, 0)

        def getRuleIndex(self):
            return patitoParser.RULE_startRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStartRule" ):
                listener.enterStartRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStartRule" ):
                listener.exitStartRule(self)




    def startRule(self):

        localctx = patitoParser.StartRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_startRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.programa()
            self.state = 35
            self.match(patitoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._Id = None # Token

        def Id(self):
            return self.getToken(patitoParser.Id, 0)

        def body(self):
            return self.getTypedRuleContext(patitoParser.BodyContext,0)


        def vars_(self):
            return self.getTypedRuleContext(patitoParser.VarsContext,0)


        def funcs(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(patitoParser.FuncsContext)
            else:
                return self.getTypedRuleContext(patitoParser.FuncsContext,i)


        def getRuleIndex(self):
            return patitoParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = patitoParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(patitoParser.T__0)
            quads.quad_main_init()
            self.state = 39
            localctx._Id = self.match(patitoParser.Id)
            global current_func, current_scope; current_func = (None if localctx._Id is None else localctx._Id.text); funclist; funclist.add_function((None if localctx._Id is None else localctx._Id.text))
            self.state = 41
            self.match(patitoParser.T__1)

            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 42
                self.vars_()


            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 45
                self.funcs()
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 51
            self.match(patitoParser.T__2)
            quads.quad_main_set()
            current_scope+=1; 
            current_func = "main";
            funclist.add_function(current_func)
            self.state = 54
            self.body()
            current_scope-=1
            self.state = 56
            self.match(patitoParser.T__3)
            funclist.print_all_functions(); quads.printQuads()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._Id = None # Token
            self._type = None # TypeContext

        def Id(self, i:int=None):
            if i is None:
                return self.getTokens(patitoParser.Id)
            else:
                return self.getToken(patitoParser.Id, i)

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(patitoParser.TypeContext)
            else:
                return self.getTypedRuleContext(patitoParser.TypeContext,i)


        def getRuleIndex(self):
            return patitoParser.RULE_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars" ):
                listener.enterVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars" ):
                listener.exitVars(self)




    def vars_(self):

        localctx = patitoParser.VarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vars)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            global current_content, current_func, current_scope, current_type, current_var, various_vars
            self.state = 60
            self.match(patitoParser.T__4)
            self.state = 77 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 61
                localctx._Id = self.match(patitoParser.Id)
                various_vars.append((None if localctx._Id is None else localctx._Id.text))
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 63
                    self.match(patitoParser.T__5)
                    self.state = 64
                    localctx._Id = self.match(patitoParser.Id)
                    various_vars.append((None if localctx._Id is None else localctx._Id.text))
                    self.state = 70
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 71
                self.match(patitoParser.T__6)
                self.state = 72
                localctx._type = self.type_()
                current_type = (None if localctx._type is None else self._input.getText(localctx._type.start,localctx._type.stop))
                self.state = 74
                self.match(patitoParser.T__1)

                for myvar in various_vars: funclist.add_variable_to_function(current_func, myvar, current_type, current_scope, current_content);
                various_vars = [];

                self.state = 79 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==30):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return patitoParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = patitoParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            _la = self._input.LA(1)
            if not(_la==8 or _la==9):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._Id = None # Token
            self._type = None # TypeContext

        def Id(self, i:int=None):
            if i is None:
                return self.getTokens(patitoParser.Id)
            else:
                return self.getToken(patitoParser.Id, i)

        def body(self):
            return self.getTypedRuleContext(patitoParser.BodyContext,0)


        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(patitoParser.TypeContext)
            else:
                return self.getTypedRuleContext(patitoParser.TypeContext,i)


        def vars_(self):
            return self.getTypedRuleContext(patitoParser.VarsContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_funcs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncs" ):
                listener.enterFuncs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncs" ):
                listener.exitFuncs(self)




    def funcs(self):

        localctx = patitoParser.FuncsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            global current_content, current_func, current_scope, current_type, current_var
            self.state = 84
            self.match(patitoParser.T__9)
            current_scope+=1
            self.state = 86
            localctx._Id = self.match(patitoParser.Id)
            current_func = (None if localctx._Id is None else localctx._Id.text); funclist.add_function(current_func)
            self.state = 88
            self.match(patitoParser.T__10)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 89
                localctx._Id = self.match(patitoParser.Id)
                self.state = 90
                self.match(patitoParser.T__6)
                self.state = 91
                localctx._type = self.type_()
                current_var = (None if localctx._Id is None else localctx._Id.text); 
                current_type = (None if localctx._type is None else self._input.getText(localctx._type.start,localctx._type.stop)); 
                funclist.add_variable_to_function(current_func, current_var, current_type, current_scope, current_content)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 93
                    self.match(patitoParser.T__5)
                    self.state = 94
                    localctx._Id = self.match(patitoParser.Id)
                    self.state = 95
                    self.match(patitoParser.T__6)
                    self.state = 96
                    localctx._type = self.type_()
                    current_var = (None if localctx._Id is None else localctx._Id.text); current_type = (None if localctx._type is None else self._input.getText(localctx._type.start,localctx._type.stop)); 
                    funclist.add_variable_to_function(current_func, current_var, current_type, current_scope, current_content)
                    self.state = 103
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 109
            self.match(patitoParser.T__11)
            self.state = 110
            self.match(patitoParser.T__12)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 111
                self.vars_()


            self.state = 114
            self.body()
            self.state = 115
            self.match(patitoParser.T__13)
            self.state = 116
            self.match(patitoParser.T__1)
            current_scope-=1;
            funclist.delete_all_variables(current_func)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(patitoParser.StatementContext)
            else:
                return self.getTypedRuleContext(patitoParser.StatementContext,i)


        def getRuleIndex(self):
            return patitoParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = patitoParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(patitoParser.T__14)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1778384896) != 0):
                self.state = 121
                self.statement()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(patitoParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(patitoParser.AssignContext,0)


        def condition(self):
            return self.getTypedRuleContext(patitoParser.ConditionContext,0)


        def cycle(self):
            return self.getTypedRuleContext(patitoParser.CycleContext,0)


        def f_call(self):
            return self.getTypedRuleContext(patitoParser.F_callContext,0)


        def print_(self):
            return self.getTypedRuleContext(patitoParser.PrintContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = patitoParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        try:
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.assign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.condition()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 131
                self.cycle()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 132
                self.f_call()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 133
                self.print_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._Id = None # Token

        def Id(self):
            return self.getToken(patitoParser.Id, 0)

        def expression(self):
            return self.getTypedRuleContext(patitoParser.ExpressionContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)




    def assign(self):

        localctx = patitoParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            localctx._Id = self.match(patitoParser.Id)

            quads.push_operate(funclist.get_variable_memory((None if localctx._Id is None else localctx._Id.text), current_scope), funclist.get_variable_type((None if localctx._Id is None else localctx._Id.text), current_scope), False, False, 0, '')

            self.state = 138
            self.match(patitoParser.T__16)

            quads.push_operator('=')

            self.state = 140
            self.expression()

            quads.quads_Assign()

            self.state = 142
            self.match(patitoParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(patitoParser.ExpContext)
            else:
                return self.getTypedRuleContext(patitoParser.ExpContext,i)


        def getRuleIndex(self):
            return patitoParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = patitoParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.exp()

            quads.quads_Compare()

            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1835008) != 0):
                self.state = 152
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [18]:
                    self.state = 146
                    self.match(patitoParser.T__17)

                    quads.push_operator('>')

                    pass
                elif token in [19]:
                    self.state = 148
                    self.match(patitoParser.T__18)

                    quads.push_operator('<')

                    pass
                elif token in [20]:
                    self.state = 150
                    self.match(patitoParser.T__19)

                    quads.push_operator('!=')

                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 154
                self.exp()

                quads.quads_Compare()

                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termino(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(patitoParser.TerminoContext)
            else:
                return self.getTypedRuleContext(patitoParser.TerminoContext,i)


        def getRuleIndex(self):
            return patitoParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)




    def exp(self):

        localctx = patitoParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_exp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.termino()

            quads.quads_PlusMin()

            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21 or _la==22:
                self.state = 168
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [21]:
                    self.state = 164
                    self.match(patitoParser.T__20)

                    quads.push_operator('+')

                    pass
                elif token in [22]:
                    self.state = 166
                    self.match(patitoParser.T__21)

                    quads.push_operator('-')

                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 170
                self.termino()

                quads.quads_PlusMin()

                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(patitoParser.FactorContext)
            else:
                return self.getTypedRuleContext(patitoParser.FactorContext,i)


        def getRuleIndex(self):
            return patitoParser.RULE_termino

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermino" ):
                listener.enterTermino(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermino" ):
                listener.exitTermino(self)




    def termino(self):

        localctx = patitoParser.TerminoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_termino)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.factor()

            quads.quads_MultDiv()

            self.state = 191
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23 or _la==24:
                self.state = 184
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [23]:
                    self.state = 180
                    self.match(patitoParser.T__22)

                    quads.push_operator('*')

                    pass
                elif token in [24]:
                    self.state = 182
                    self.match(patitoParser.T__23)

                    quads.push_operator('/')

                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 186
                self.factor()

                quads.quads_MultDiv()

                self.state = 193
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._Id = None # Token

        def expression(self):
            return self.getTypedRuleContext(patitoParser.ExpressionContext,0)


        def Id(self):
            return self.getToken(patitoParser.Id, 0)

        def cte(self):
            return self.getTypedRuleContext(patitoParser.CteContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)




    def factor(self):

        localctx = patitoParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_factor)
        try:
            self.state = 217
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 194
                self.match(patitoParser.T__10)

                quads.push_FF()

                self.state = 196
                self.expression()
                self.state = 197
                self.match(patitoParser.T__11)

                quads.pop_FF()

                pass
            elif token in [21, 22]:
                self.enterOuterAlt(localctx, 2)
                global temporal_operator
                self.state = 205
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [21]:
                    self.state = 201
                    self.match(patitoParser.T__20)
                    temporal_operator = '+'
                    pass
                elif token in [22]:
                    self.state = 203
                    self.match(patitoParser.T__21)
                    temporal_operator = '-'
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 210
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [30]:
                    self.state = 207
                    localctx._Id = self.match(patitoParser.Id)

                    quads.push_operate(funclist.get_variable_memory((None if localctx._Id is None else localctx._Id.text), current_scope), funclist.get_variable_type((None if localctx._Id is None else localctx._Id.text), current_scope), False, False, (None if localctx._Id is None else localctx._Id.text), temporal_operator); temporal_operator = ''

                    pass
                elif token in [31, 32, 33]:
                    self.state = 209
                    self.cte()
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [30, 31, 32, 33]:
                self.enterOuterAlt(localctx, 3)
                self.state = 215
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [30]:
                    self.state = 212
                    localctx._Id = self.match(patitoParser.Id)

                    quads.push_operate(funclist.get_variable_memory((None if localctx._Id is None else localctx._Id.text), current_scope), funclist.get_variable_type((None if localctx._Id is None else localctx._Id.text), current_scope), False, False, (None if localctx._Id is None else localctx._Id.text), '')

                    pass
                elif token in [31, 32, 33]:
                    self.state = 214
                    self.cte()
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._Cte_int = None # Token
            self._Cte_float = None # Token
            self._Cte_string = None # Token

        def Cte_int(self):
            return self.getToken(patitoParser.Cte_int, 0)

        def Cte_float(self):
            return self.getToken(patitoParser.Cte_float, 0)

        def Cte_string(self):
            return self.getToken(patitoParser.Cte_string, 0)

        def getRuleIndex(self):
            return patitoParser.RULE_cte

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCte" ):
                listener.enterCte(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCte" ):
                listener.exitCte(self)




    def cte(self):

        localctx = patitoParser.CteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_cte)
        try:
            self.state = 226
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 219
                localctx._Cte_int = self.match(patitoParser.Cte_int)
                global temporal_operator
